Change: Check creation time of registration form and its answer
